...
            Navigator.of(context).pop(isYoutubePlaylistAdded);
          }
        }
      },
      child: AlertDialog(
        title: Text(
          key: const Key('playlistConfirmDialogTitleKey'),
          (widget.playlistUrl.isNotEmpty)
              ? AppLocalizations.of(context)!.addYoutubePlaylistDialogTitle
              : AppLocalizations.of(context)!.addLocalPlaylistDialogTitle,
        ),
        actionsPadding: kDialogActionsPadding,
        content: SingleChildScrollView(
          child: ListBody(
            children: <Widget>[
              (widget.playlistUrl.isNotEmpty)
                  ? createInfoRowFunction(
                      // displaying the playlist URL
                      valueTextWidgetKey:
                          const Key('playlistUrlConfirmDialogText'),
                      context: context,
                      label:
                          AppLocalizations.of(context)!.youtubePlaylistUrlLabel,
                      value: widget.playlistUrl)
                  : createEditableRowFunction(
                      // displaying the local playlist title TextField
                      valueTextFieldWidgetKey:
                          const Key('playlistLocalTitleConfirmDialogTextField'),
                      context: context,
                      label:
                          AppLocalizations.of(context)!.localPlaylistTitleLabel,
                      controller: _localPlaylistTitleTextEditingController,
                      textFieldFocusNode: _localPlaylistTitleFocusNode,
                    ),
              createCheckboxRowFunction(
                // displaying music quality checkbox
                checkBoxWidgetKey:
                    const Key('playlistQualityConfirmDialogCheckBox'),
                context: context,
                label: AppLocalizations.of(context)!.isMusicQualityLabel,
                value: _isChecked,
                onChangedFunction: (bool? value) {
                  setState(() {
                    _isChecked = value ?? false;
...
              ),
            ],
          ),
        ),
        actions: [
          TextButton(
            key: const Key('addPlaylistConfirmDialogAddButton'),
            onPressed: () async {
              bool isYoutubePlaylistAdded = await _addPlaylist(
                context: context,
              );
              Navigator.of(context).pop(isYoutubePlaylistAdded);
            },
...
