...
              Navigator.of(context).pop();
            }
          }
        },
        child: AlertDialog(
          title: Text(
            key: const Key('warningDialogTitle'),
            alertDialogTitle,
          ),
          actionsPadding: kDialogActionsPadding,
          content: Text(
            key: const Key('warningDialogMessage'),
            message,
            style: kDialogTextFieldStyle,
          ),
          actions: [
            TextButton(
              child: Text(
                key: const Key('warningDialogOkButton'),
                'Ok',
                style: (themeProviderVM.currentTheme == AppTheme.dark)
                    ? kTextButtonStyleDarkMode
                    : kTextButtonStyleLightMode,
              ),
              onPressed: () {
...
